--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Silent Frames — About Me</title>
-  <meta name="description" content="Silent Frames — one-page about me for a moody, dark photography personal site." />
+  <title>TC7 Playgrounds</title>
+  <meta name="description" content="TC7SilentFramesProject. One-page about me for a moody, photography personal site." />
 
-  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 
   <style>
-    /* ---------- Base ---------- */
+    
     :root{
       --bg:#080808;            /* matte black */
       --muted:#AFAFAF;         /* muted grey */
@@ -32,10 +31,8 @@
     a{color:var(--accent);text-decoration:none}
     img{max-width:100%;height:auto;display:block}
 
-    /* ---------- Layout ---------- */
     .wrap{max-width:var(--max-width);margin:0 auto;padding:48px 20px}
 
-    /* ---------- Header / Hero ---------- */
     header{min-height:70vh;display:grid;align-items:center}
     .hero{
       display:grid;grid-template-columns:1fr 420px;gap:48px;align-items:center;
@@ -50,16 +47,13 @@
     .btn{background:transparent;border:1px solid rgba(255,255,255,0.08);padding:10px 16px;border-radius:6px;color:var(--accent);font-weight:600;cursor:pointer}
     .btn:focus{outline:2px solid rgba(215,200,177,0.18)}
 
-    /* Visual hero image on right */
     .hero-right{position:relative;border-radius:8px;overflow:hidden;background:linear-gradient(180deg,rgba(0,0,0,0.35),rgba(0,0,0,0.6));min-height:420px}
     .hero-photo{width:100%;height:100%;object-fit:cover;display:block}
     .hero-caption{position:absolute;left:18px;bottom:18px;font-size:13px;color:var(--muted);opacity:0.9}
 
-    /* ---------- About / Intro ---------- */
     .intro{padding:40px 0;border-top:1px solid rgba(255,255,255,0.03);border-bottom:1px solid rgba(255,255,255,0.03);margin-top:18px}
     .intro p{color:var(--muted);font-size:16px;max-width:820px}
 
-    /* ---------- Curated Gallery (masonry-like) ---------- */
     .gallery{padding:40px 0}
     .grid{display:grid;grid-template-columns:repeat(3,1fr);gap:10px}
     .grid .item{position:relative;overflow:hidden;border-radius:6px;background:var(--glass);cursor:pointer}
@@ -67,30 +61,25 @@
     .grid .item:hover img{transform:scale(1.05)}
     .grid .item .meta{position:absolute;left:10px;bottom:10px;font-size:12px;color:var(--muted);backdrop-filter:blur(4px)}
 
-    /* Make masonry feel dynamic using variable row heights */
     .grid .tall{grid-row:span 2;height:420px}
     .grid .wide{grid-column:span 2;height:260px}
     .grid .big{grid-column:span 2;grid-row:span 2;height:420px}
 
-    /* ---------- Q&A (Behind the Lens) ---------- */
     .qa{padding:40px 0}
     .qa-grid{display:grid;grid-template-columns:1fr 1fr;gap:18px}
     .qa-card{background:rgba(255,255,255,0.02);padding:18px;border-radius:8px;border:1px solid rgba(255,255,255,0.03)}
     .qa-card h4{margin:0 0 8px 0;font-size:16px}
     .qa-card p{margin:0;color:var(--muted)}
 
-    /* ---------- Footer / Contact ---------- */
     footer{padding:36px 0;border-top:1px solid rgba(255,255,255,0.03);text-align:center;color:var(--muted)}
     .socials{display:flex;gap:14px;justify-content:center;margin-top:8px}
 
-    /* ---------- Lightbox Modal ---------- */
     .modal{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:rgba(0,0,0,0.88);z-index:9999}
     .modal.show{display:flex}
     .modal .modal-inner{max-width:1200px;width:100%;padding:20px}
     .modal img{width:100%;height:auto;border-radius:6px}
     .modal .close{position:absolute;right:18px;top:18px;background:transparent;border:0;color:#fff;font-size:22px;cursor:pointer}
 
-    /* ---------- Responsive ---------- */
     @media (max-width:980px){
       .hero{grid-template-columns:1fr;gap:20px}
       .grid{grid-template-columns:repeat(2,1fr)}
@@ -104,7 +93,6 @@
       .brand{font-size:34px}
     }
 
-    /* small helpers */
     .muted{color:var(--muted)}
     .section-title{font-family:'Playfair Display',serif;font-size:22px;margin-bottom:12px}
   </style>
@@ -115,9 +103,9 @@
     <header>
       <div class="hero">
         <div class="hero-left">
-          <h1 class="brand">Silent Frames</h1>
-          <div class="kicker">A glimpse into a moody practice</div>
-          <p class="strap">I photograph quiet moments, textures, and the interplay of light and shadow. Below are a selection of frames I return to—images that lean toward silence and truth.</p>
+          <h1 class="brand">Walking Through Light and Silence.</h1>
+          <div class="kicker">Im not someone who talks loudly about myself.</div>
+          <p class="strap">I move quietly, capturing what feels true—not just what appears, a small space where I introduce myself—without formality, without filters, just as Tasya.</p>
           <div class="cta">
             <button class="btn" id="view-gallery">View Gallery</button>
             <a class="btn" href="#contact">Connect</a>
@@ -125,9 +113,8 @@
         </div>
 
         <div class="hero-right" aria-hidden="true">
-          <!-- Replace src with your chosen hero photo -->
           <img class="hero-photo" src="https://images.unsplash.com/photo-1519681393784-d120267933ba?q=80&w=1600&auto=format&fit=crop&ixlib=rb-4.0.3&s=0a3b25a0f6d08c7b5e80e8b68c7e5d2c" alt="Hero — moody street scene">
-          <div class="hero-caption">© Silent Frames — selected work</div>
+          <div class="hero-caption">© TC7SilentFramesProject. — selected work</div>
         </div>
       </div>
     </header>
@@ -143,7 +130,6 @@
       <section class="gallery" id="gallery">
         <div class="section-title">Curated Frames</div>
         <div class="grid" id="grid">
-          <!-- Replace image URLs with your own photographs. Class modifiers (tall, wide, big) adjust layout. -->
           <div class="item big" data-src="https://images.unsplash.com/photo-1469474968028-56623f02e42e?q=80&w=1600&auto=format&fit=crop&ixlib=rb-4.0.3&s=3d9d3af2f1a4f9d3b5a6eb9f2b2ab9f0">
             <img src="https://images.unsplash.com/photo-1469474968028-56623f02e42e?q=60&w=800&auto=format&fit=crop&ixlib=rb-4.0.3&s=3d9d3af2f1a4f9d3b5a6eb9f2b2ab9f0" alt="Moody alley at night">
             <div class="meta">Alley, 2019</div>
@@ -178,37 +164,63 @@
       </section>
 
       <section class="qa">
-        <div class="section-title">Behind the Lens</div>
+        <div class="section-title">Behind the Project</div>
         <div class="qa-grid">
           <div class="qa-card">
-            <h4>Why dark photography?</h4>
-            <p>Because quiet light reveals truth. Brightness hides; the dark asks questions. I try to answer them with a frame.</p>
+            <h4>Why do you shoot with a phone?</h4>
+          <p>It’s simple.<br>
+Fast.<br>
+Uncomplicated.<br>
+And it lets me stay present.</p>
           </div>
           <div class="qa-card">
             <h4>What's my process?</h4>
-            <p>I scout for mood—an alley, a window, a face. I wait for light that behaves like a story. Then I listen and press the shutter.</p>
+            <p>I start by collecting ideas, letting them sit, and seeing which ones stick.<br>
+  Then I build, tweak, and polish until everything feels natural.<br>
+  I do things step by step, no pressure, no drama—just steady progress.</p>
           </div>
         </div>
       </section>
 
       <section id="contact">
-        <div class="section-title">Connect</div>
-        <p class="muted">Interested in a conversation? I prefer to keep work quiet—reach me on Instagram or send a short note. I read every message.</p>
-        <div class="socials">
-          <a href="https://instagram.com/yourhandle" target="_blank" rel="noopener">Instagram</a>
-          <a href="mailto:youremail@example.com">Email</a>
-          <a href="#" id="download">Download PDF</a>
-        </div>
-      </section>
+  <div class="contact-container">
+
+    <!-- LEFT SIDE: Caption -->
+    <div class="contact-text">
+      <div class="section-title">Connect</div>
+
+      <p class="muted"><div> I’m not here to network loudly.<br>
+  If something in my thoughts, mood, or work speaks to you,<br>
+  you can reach out.<br>
+  <br>
+  I connect best through quiet conversations, slow ideas,<br>
+  and people who appreciate simplicity.<br>
+  <br>
+  No pressure, no expectations—<br>
+  just two humans meeting at the right moment.
+</p>
+
+        <br>
+    <div class="socials">
+      <a href="https://instagram.com/mantasyaisrohasan" target="_blank">Instagram</a>
+      <a href="https://discord.gg/xzNBhxU" target="_blank">Discord</a>
+      <a href="https://open.spotify.com/user/31wpadzehskgi4njorlbwqpcov5y" target="_blank">Spotify</a>
+      <a href="mailto:mantasyaisro@gmail.com">Email</a>
+    </div>
+
+  </div>
+</section>
+
 
     </main>
 
     <footer>
-      © <span id="year"></span> Silent Frames — All images © their respective authors
+      © <span id="year"></span> TC7SilentFramesProject — Each image © its original author. 
+      <br> This project was made because people called me unemployed, on Sunday, November 23, 2025, at 9:28 PM
+      <br> in Banjarbaru, South Kalimantan. All coding skills, website code, templates, and assets were created by myself @tasyacyber7.
     </footer>
   </div>
 
-  <!-- Lightbox modal -->
   <div class="modal" id="modal" role="dialog" aria-modal="true" aria-hidden="true">
     <button class="close" id="close-modal" aria-label="Close">✕</button>
     <div class="modal-inner">
@@ -274,3 +286,4 @@
 
 </body>
 </html>
+
