--- a/index.html
+++ b/index.html
@@ -119,6 +119,10 @@
       </div>
     </header>
 
+    <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; height: auto;">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/bdeeGED1Wws?si=OsjtGXVuLH83ho1_?autoplay=1 &mute=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
+</div>
+    
     <main>
       <section class="intro">
         <div class="section-title">About</div>
@@ -286,5 +290,6 @@ And it lets me stay present.</p>
 
 </body>
 </html>
+
 
 
